# faucet-server

./: Cargo.toml
sled_data/: db  snap.0000000000000381  snap.0000000000000A07
src/: diesel_sqlite.rs  evm.rs  fund.rs  fundsender.rs  main.rs  rusqlite.rs  sled.rs  sqlx.rs  subxt.rs  validate_account.rs
