[package]
name = "faucet-server"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = "0.4.5"
rocket_contrib = "0.4.5"
sled = "0.34.4"
sled-extensions = { version = "0.2.0", features = ["bincode"]}
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.59"
thiserror = "1.0.21"
async-trait = "0.1.49"
log = "0.4.0"
env_logger = "0.8.4"
anyhow = "1.0.39"
ethers = { git = "https://github.com/gakonst/ethers-rs", features = ["legacy"] }
sp-core = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
sp-keyring = { git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.10" }
substrate-subxt = { git = "https://github.com/paritytech/subxt.git", version = "0.15.0" }
